--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/index.js",
-    "start": "node index.js",
-    "build": "npm i"
-  },
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
