--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-        "start": "nodemon backend/index.js",
-        "dev":"node index.js"
+        "dev": "nodemon backend/index.js",
+        "start":"node index.js"
       },
   "keywords": [],
   "author": "",
