--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_DIALECT=mysql
 JWT_SECRET=BANNU9
 
 # Email Configuration
-EMAIL_USER=bannureddykallem@gmail.com
+EMAIL_USER=ogya034@gmail.com
 EMAIL_PASS=oxyl xyfs qako bldv
 
 # Other Configuration
